[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/scenes/StatsScene/StatsScene.gd" type="Script" id=1]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=2]

[node name="StatsScene" type="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.352941 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -506.0

[node name="Hide" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = 150.0
margin_right = 99.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "I Got It,Thanks!"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.75
margin_top = 11.25
margin_right = 625.75
margin_bottom = 67.25

[node name="stats_points" type="Label" parent="VBoxContainer"]
margin_right = 619.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )

[node name="stats_coins" type="Label" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 619.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )

[node name="stats_killed_enemies" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 619.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )

[connection signal="pressed" from="Panel/Hide" to="." method="_on_Hide_pressed"]
